# fontFeatures

./: .coveragerc  .gitignore  CHANGES.md  NEW-FORMAT.md  README.md  fea2fea.py  fee2fea  mergeFee  mergeFee.py  otf2fea.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test-parser.py  test.fee  test_shaping.py  txt2fea  txt2fea.py  txt2fee.py
.github/workflows/: ci.yml  test.yml
Lib/fontFeatures/: __init__.py
docs/: conf.py  converting.rst  fee-format.rst  fontFeatures.rst  index.rst  supportingmodules.rst
fee-samples/: anchors.fee  collision.fea  kerntodistance.fea  matras.fee  new-bariye.fee  test.fee  yb-overhangfix.fee
fontFeatures/: __init__.py  fontGlyphs.py  fontProxy.py  ftUtils.py  jankyPOS.py  parserTools.py  pathUtils.py  utils.py  variableScalar.py
fontFeatures/feaLib/: Attachment.py  Chaining.py  FontFeatures.py  Positioning.py  Routine.py  RoutineReference.py  __init__.py  (+1 more)
tests/: README.md  test_anchors.py  test_binary_emitter.py  test_chaining.py  test_classdefs.py  test_fea_parser.py  test_fea_unparser.py  test_fee.py  test_fee_anchors.py  test_fee_parser.py  test_font_glyphs.py  test_fontdame.py  test_fontfeatures.py  test_jankypos.py  test_languages.py  test_optimizer.py  test_positioning.py  test_routine_partition.py  test_shaping_arabic.py  test_shaping_generic.py  test_shaping_harfbuzz.py  test_shaping_indic.py  test_substitution.py  test_unparse.py  test_unparse_pos.py  test_unparse_sub.py  test_valuerecord.py  test_variable_scalar.py
utils/: addfeatures.py  dump-anchors.py  gen-vowel-constraints.py
vim/: fee.vim
(+106 files in other folders)
